turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:10: error: type mismatch;
 found   : Unit
 required: Boolean
  if (rule(indice)='L'){
                  ^