turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def step(rule:Array[Char], colors:Array[Color]) {
  var indice = 0
  while(getCouleurSol()!=colors(indice)){
    indice = indice+1
  }
  setCouleurBrosse(colors((indice+1)%(colors.length-1)))
  baisseBrosse()
  leveBrosse()
  if (rule(indice)='L'){
    gauche()
    avance
  } else {
    droite()
    avance()
  }
}